# gdelt-rag-evaluation

./: Makefile  README.md  manifest.json  pyproject.toml  requirements.txt
.cursor/rules/: cert-challenge-evidence-map-rule-v4.mdc
.github/: template.yml
.github/workflows/: ci.yml
@cert-challenge-grading/: llm-stack-guidance.md  official-task-list.md  rubric.csv
deliverables/evaluation_evidence/: README.md
docs/: START_HERE.md  cert-challenge-cursor-prompts.md
